charts/meelo/meelo/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: front
  template:
    metadata:
      labels:
        app.kubernetes.io/component: front
    spec:
      containers:
      - name: front
        image: arthichaud/meelo-front:v3.13.1
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: front
  ports:
  - name: http
    port: 3000
    targetPort: http
