charts/meelo/meelo/matcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matcher
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: matcher
  template:
    metadata:
      labels:
        app.kubernetes.io/component: matcher
    spec:
      containers:
      - name: matcher
        image: arthichaud/meelo-matcher:v3.13.1
        ports:
        - name: http
          containerPort: 6789
        volumeMounts:
        - name: settings
          mountPath: /config
          readOnly: true
      volumes:
      - name: settings
        secret:
          secretName: settings
---
apiVersion: v1
kind: Service
metadata:
  name: matcher
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: matcher
  ports:
  - name: http
    port: 6789
    targetPort: http
