charts/meelo/meelo/meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: meilisearch
  template:
    metadata:
      labels:
        app.kubernetes.io/component: meilisearch
    spec:
      containers:
      - name: meilisearch
        image: getmeili/meilisearch:v1.54
        ports:
        - name: http
          containerPort: 7700
        volumeMounts:
        - name: data
          mountPath: /meili_data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: meilisearch
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: meilisearch
  ports:
  - name: http
    port: 7700
    targetPort: http
