charts/meelo/meelo/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/component: rabbitmq
    spec:
      # mnesia stores its data under a directory named after the node, keep it stable
      hostname: meelo-mq
      containers:
      - name: rabbitmq
        image: rabbitmq:4.3-alpine
        ports:
        - name: amqp
          containerPort: 5672
        volumeMounts:
        - name: data
          mountPath: /var/lib/rabbitmq
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: rabbitmq
      securityContext:
        fsGroup: 999
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: amqp
