charts/meelo/meelo/scanner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanner
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: scanner
  template:
    metadata:
      labels:
        app.kubernetes.io/component: scanner
    spec:
      containers:
      - name: scanner
        image: arthichaud/meelo-scanner:v3.13.1
        ports:
        - name: http
          containerPort: 8133
        volumeMounts:
        - name: settings
          mountPath: /config
          readOnly: true
        - name: musics
          mountPath: /data
          readOnly: true
      volumes:
      - name: settings
        secret:
          secretName: settings
      - name: musics
        persistentVolumeClaim:
          claimName: musics
---
apiVersion: v1
kind: Service
metadata:
  name: scanner
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: scanner
  ports:
  - name: http
    port: 8133
    targetPort: http
