charts/meelo/meelo/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      containers:
      - name: server
        image: arthichaud/meelo-server:v3.13.1
        command: [/bin/sh, -c]
        args:
        - yarn run prisma migrate deploy && yarn run start:prod
        ports:
        - name: http
          containerPort: 4000
        volumeMounts:
        - name: config
          mountPath: /config
        - name: settings
          mountPath: /config/settings.json
          subPath: settings.json
        - name: musics
          mountPath: /data
        - name: postgres-cert
          mountPath: /pg
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: settings
        secret:
          secretName: settings
      - name: musics
        persistentVolumeClaim:
          claimName: musics
      - name: postgres-cert
        secret:
          secretName: postgres-meelo
          defaultMode: 0640
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: server
  ports:
  - name: http
    port: 4000
    targetPort: http
