charts/meelo/meelo/transcoder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transcoder
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: transcoder
  template:
    metadata:
      labels:
        app.kubernetes.io/component: transcoder
    spec:
      containers:
      - name: transcoder
        # same tag as kyoo's transcoder, the image is 3G so let's not keep two of them around
        image: ghcr.io/zoriya/kyoo_transcoder:edge
        ports:
        - name: http
          containerPort: 7666
        volumeMounts:
        - name: musics
          mountPath: /data
          readOnly: true
        - name: metadata
          mountPath: /metadata
        - name: cache
          mountPath: /cache
        - name: postgres-cert
          mountPath: /pg
      volumes:
      - name: musics
        persistentVolumeClaim:
          claimName: musics
      - name: metadata
        persistentVolumeClaim:
          claimName: transcoder-metadata
      - name: cache
        emptyDir:
          sizeLimit: 16Gi
      - name: postgres-cert
        secret:
          secretName: postgres-meelo
          defaultMode: 0640
---
apiVersion: v1
kind: Service
metadata:
  name: transcoder
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: transcoder
  ports:
  - name: http
    port: 7666
    targetPort: http
