charts/meelo/meelo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meelo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: cilium
  rules:
  - host: meelo.sdg.moe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
  - hosts:
    - meelo.sdg.moe
    secretName: meelo-tls
